--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ digiKam 7.8.0 - Release date: 2022-??-??
 NEW FEATURES:
 
 General : HIF files recognized as HEIF images.
+IconView: add support of GrayScale and 16 bits PSD images.
 
 *****************************************************************************************************
 BUGFIXES:
