--- a/NEWS
+++ b/NEWS
@@ -20,7 +20,7 @@ BUGFIXES:
 009 ==> 397610 - Problem to render greyscale PSD thumbnails.
 010 ==> 261088 - PSD 16 Bit images not displayed.
 011 ==> 452032 - Dark mode support on macOS.
-012 ==> 
+012 ==> 456347 - Delete does not work anymore.
 013 ==> 
 014 ==> 
 015 ==> 
