add another variant to detect date and time from filename BUGS: 456604 FIXED-IN: 7.8.0

--- a/NEWS
+++ b/NEWS
@@ -24,7 +24,7 @@ BUGFIXES:
 013 ==> 456481 - Open with default program -button opens multiple editor windows.
 014 ==> 456592 - No "remove all filters" command available.
 015 ==> 456545 - The "handles" in the scroll bars are too inconspicuous.
-016 ==> 
+016 ==> 456604 - Parse "file name timestamp" with template YYYY-MM-DD hh[hH]mm when adjusting time & date.
 017 ==> 
 018 ==> 
 019 ==> 
