--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,21 @@ General : HIF files recognized as HEIF images.
 IconView: Add support of GrayScale and 16 bits PSD images.
 Bundles : AppImage ported to Qt5 5.15.5
 Bundles : all bundles ported to KF5 5.96
+General : Libraw updated to 2022-07-14 snapshot.
+          Camera format support:
+              Phase One/Leaf IIQ-S v2 support
+              Canon CR3 filmrolls/RawBurst
+              Canon CRM (movie) files
+              iled bit-packed (and 16-bit unpacked) DNGs
+              (non-standard) Deflate-compressed integer DNG files are allowed
+          Camera support:
+              Canon EOS R3, R7 and R10
+              Fujifilm X-H2S, X-T30 II
+              OM System OM-1
+              Leica M11
+              Sony A7-IV (ILCE-7M4)
+              DJI Mavic 3
+              Nikon Z9: standard compression formats only
 
 *****************************************************************************************************
 BUGFIXES:
