--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ Advanced Rename: Add increment file counter to sequence numbering with option [c
 Advanced Rename: Add random text sequence numbering with option [r].
 Advanced Search: Add search for items by number of face regions.
 Advanced Search: Add search for items without face regions.
+Collections    : Add support for cross-platform network paths.
 
 *****************************************************************************************************
 BUGFIXES:
