--- a/NEWS
+++ b/NEWS
@@ -96,4 +96,5 @@ BUGFIXES:
 074 ==> 384820 - Allow matching library paths across different operating systems?
 075 ==> 456749 - Cross-platform filename support.
 076 ==> 424965 - Provide UI for Database Network Share for multiple mountpaths.
-077 ==> 
+077 ==> 310106 - MYSQL : try to access to database from two computers and collections get lost.
+078 ==> 
