--- a/NEWS
+++ b/NEWS
@@ -43,7 +43,17 @@ BUGFIXES:
 015 ==> 456545 - The "handles" in the scroll bars are too inconspicuous.
 016 ==> 456604 - Parse "file name timestamp" with template YYYY-MM-DD hh[hH]mm when adjusting time & date.
 017 ==> 457022 - digiKam overrides the original raw-image (cr2) as jpg-file after or before a cut and save as new image. Then you have two jpg-files.
-018 ==> 
+018 ==> 457061 - Crash opening any folder on macOS 10.14.
 019 ==> 
 020 ==> 
 021 ==> 
+022 ==> 
+023 ==> 
+024 ==> 
+025 ==> 
+026 ==> 
+027 ==> 
+028 ==> 
+029 ==> 
+030 ==> 
+031 ==> 
