--- a/NEWS
+++ b/NEWS
@@ -44,8 +44,8 @@ BUGFIXES:
 016 ==> 456604 - Parse "file name timestamp" with template YYYY-MM-DD hh[hH]mm when adjusting time & date.
 017 ==> 457022 - digiKam overrides the original raw-image (cr2) as jpg-file after or before a cut and save as new image. Then you have two jpg-files.
 018 ==> 457061 - Crash opening any folder on macOS 10.14.
-019 ==> 
-020 ==> 
+019 ==> 120055 - ALBUMTHUMBS : Allow to use any image managed by digiKam as Tags album thumbnail.
+020 ==> 457086 - A request to add our own tag icons.
 021 ==> 
 022 ==> 
 023 ==> 
