--- a/NEWS
+++ b/NEWS
@@ -46,7 +46,7 @@ BUGFIXES:
 018 ==> 457061 - Crash opening any folder on macOS 10.14.
 019 ==> 120055 - ALBUMTHUMBS : Allow to use any image managed by digiKam as Tags album thumbnail.
 020 ==> 457086 - A request to add our own tag icons.
-021 ==> 
+021 ==> 457153 - Allow for sub-folders to be searched when selecting Scan for faces in Albums.
 022 ==> 
 023 ==> 
 024 ==> 
