--- a/NEWS
+++ b/NEWS
@@ -47,7 +47,7 @@ BUGFIXES:
 019 ==> 120055 - ALBUMTHUMBS : Allow to use any image managed by digiKam as Tags album thumbnail.
 020 ==> 457086 - A request to add our own tag icons.
 021 ==> 457153 - Allow for sub-folders to be searched when selecting Scan for faces in Albums.
-022 ==> 
+022 ==> 456833 - No Drag and drop or Open with in showfoto Appimage.
 023 ==> 
 024 ==> 
 025 ==> 
