--- a/NEWS
+++ b/NEWS
@@ -49,7 +49,7 @@ BUGFIXES:
 021 ==> 457153 - Allow for sub-folders to be searched when selecting Scan for faces in Albums.
 022 ==> 456833 - No Drag and drop or Open with in showfoto Appimage.
 023 ==> 457225 - Make use of existing people tags.
-024 ==> 
+024 ==> 425352 - Cursor is huge and jagged.
 025 ==> 
 026 ==> 
 027 ==> 
