--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ General : Libraw updated to 2022-07-14 snapshot.
               Sony A7-IV (ILCE-7M4)
               DJI Mavic 3
               Nikon Z9: standard compression formats only
+Plugins : GMicQt tool updated to last version 3.1.
 
 *****************************************************************************************************
 BUGFIXES:
