--- a/NEWS
+++ b/NEWS
@@ -51,7 +51,7 @@ BUGFIXES:
 022 ==> 456833 - No Drag and drop or Open with in showfoto Appimage.
 023 ==> 457225 - Make use of existing people tags.
 024 ==> 425352 - Cursor is huge and jagged.
-025 ==> 
+025 ==> 333115 - Add tool to fix dust area from lens.
 026 ==> 
 027 ==> 
 028 ==> 
