Introduce usage of KF5::Sonnet to perform basis spell-checking in caption text fields. We do not use volumntary the more complex KF5::KTextEdit as it introduces extra keyboard shortcuts which break the user workflow while tagging items in collection or navogating in albums. The spell-checking language is set with the text language code from caption settings. The dictionnaries must be installed of course from one of supportted backend as ASpell or Hunspell

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -304,6 +304,7 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | KF::Config           |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kconfig             |                                                        |                                                                                       |
 | KF::XmlGui           |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kxmlgui             |                                                        |                                                                                       |
 | KF::I18n             |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/ki18n               |                                                        |                                                                                       |
+| KF::Sonnet           |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/sonnet              | To perform spell-cheking in text widget (aka caption)  |                                                                                       |
 | KF::WindowSystem     |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kwindowsystem       |                                                        |                                                                                       |
 | KF::Service          |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kservice            | TODO: make optional for Linux desktop (DFileOperations)|                                                                                       |
 | KF::Solid            |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/solid               |                                                        |                                                                                       |
