--- a/NEWS
+++ b/NEWS
@@ -102,4 +102,23 @@ BUGFIXES:
 079 ==> 457229 - Importing, wrong date.
 080 ==> 415536 - Rename on Import.
 081 ==> 457347 - Fix crash in qtav libavfilter with FFMPEG 5.
-082 ==> 
+082 ==> 402922 - Spell check.
+083 ==> 
+084 ==> 
+085 ==> 
+086 ==> 
+087 ==> 
+088 ==> 
+089 ==> 
+090 ==> 
+091 ==> 
+092 ==> 
+093 ==> 
+094 ==> 
+095 ==> 
+096 ==> 
+097 ==> 
+098 ==> 
+099 ==> 
+100 ==> 
+101 ==> 
