Spell-Checking with KF5::Sonet is now an optional dependencies with digiKam core. CCBUGS: 402922, 360954, 256471, 92310

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -304,7 +304,6 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | KF::Config           |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kconfig             |                                                        |                                                                                       |
 | KF::XmlGui           |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kxmlgui             |                                                        |                                                                                       |
 | KF::I18n             |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/ki18n               |                                                        |                                                                                       |
-| KF::Sonnet           |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/sonnet              | To perform spell-cheking in text widget (aka caption)  |                                                                                       |
 | KF::WindowSystem     |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kwindowsystem       |                                                        |                                                                                       |
 | KF::Service          |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kservice            | TODO: make optional for Linux desktop (DFileOperations)|                                                                                       |
 | KF::Solid            |      X      | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/solid               |                                                        |                                                                                       |
@@ -316,6 +315,7 @@ The full list of mandatory (X) and (optional) external dependencies required to 
 | KF::FileMetaData     |   optional  | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kfilemetadata       | Plasma desktop files indexer support                   | (ENABLE_KFILEMETADATASUPPORT=ON) Disabled by default.                                 |
 | KF::CalendarCore     |   optional  | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kcalendarcore       | For calendar tool to setup ical special events         |                                                                                       |
 | KF::KIO              |   optional  | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kio                 | Optional: only for Linux Desktop                       |                                                                                       |
+| KF::Sonnet           |   optional  | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/sonnet              | To perform spell-cheking in text widget (aka caption)  |                                                                                       |
 | KF::AkonadiContact   |   optional  | >= 5.16.0     | >= 5.91.0     | https://invent.kde.org/pim/akonadi-contacts           | Plasma desktop addess-book support                     | (ENABLE_AKONADICONTACTSUPPORT=ON) Disabled by default.                                |
 | libopencv            |      X      | >= 3.3        |               | https://github.com/opencv/opencv                      | OpenCV 4 recommended                                   | DNN module required for face management                                               |
 | libtiff              |      X      | >= 4.0        |               | https://gitlab.com/libtiff/libtiff                    | For DImg TIFF image loader                             |                                                                                       |
