MetadataEdit plugin: make dialog fully resizable BUGS: 407468 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -106,7 +106,7 @@ BUGFIXES:
 083 ==> 092310 - Wish: spell check support in picture comments.
 084 ==> 360954 - No spell checking when entering Tags.
 085 ==> 256471 - Add spell checking to text areas.
-086 ==> 
+086 ==> 407468 - Metadata Edit window is too small.
 087 ==> 
 088 ==> 
 089 ==> 
