--- a/NEWS
+++ b/NEWS
@@ -107,7 +107,7 @@ BUGFIXES:
 084 ==> 360954 - No spell checking when entering Tags.
 085 ==> 256471 - Add spell checking to text areas.
 086 ==> 407468 - Metadata Edit window is too small.
-087 ==> 
+087 ==> 457602 - Configurable first character for the unique modifier.
 088 ==> 
 089 ==> 
 090 ==> 
