--- a/NEWS
+++ b/NEWS
@@ -109,7 +109,7 @@ BUGFIXES:
 085 ==> 256471 - Add spell checking to text areas.
 086 ==> 407468 - Metadata Edit window is too small.
 087 ==> 457602 - Configurable first character for the unique modifier.
-088 ==> 
+088 ==> 457594 - The facesengine binary should be installed to AppData\Local and not AppData\Roaming.
 089 ==> 
 090 ==> 
 091 ==> 
