--- a/NEWS
+++ b/NEWS
@@ -64,4 +64,5 @@ BUGFIXES:
 035 ==> 457693 - digiKam crashes if trying to delete selection of multiple files.
 036 ==> 454676 - Metadata missing from thumbnails after moving more than 30 to 40 images at a time between albums.
 037 ==> 457682 - Cut and Paste operations with Tags on many elements gives an unexpected result.
-038 ==> 
+038 ==> 457830 - Can't add Collections from local filesystem.
+039 ==> 
