--- a/NEWS
+++ b/NEWS
@@ -111,8 +111,8 @@ BUGFIXES:
 086 ==> 407468 - Metadata Edit window is too small.
 087 ==> 457602 - Configurable first character for the unique modifier.
 088 ==> 457594 - The facesengine binary should be installed to AppData\Local and not AppData\Roaming.
-089 ==> 
-090 ==> 
+089 ==> 435070 - Use WAL mode for SQLite databases.
+090 ==> 456024 - Use Write-Ahead-Logging as default journalling mode.
 091 ==> 
 092 ==> 
 093 ==> 
