--- a/NEWS
+++ b/NEWS
@@ -65,4 +65,5 @@ BUGFIXES:
 036 ==> 454676 - Metadata missing from thumbnails after moving more than 30 to 40 images at a time between albums.
 037 ==> 457682 - Cut and Paste operations with Tags on many elements gives an unexpected result.
 038 ==> 457830 - Can't add Collections from local filesystem.
-039 ==> 
+039 ==> 457896 - In People view, the viewport doesn't scroll to the selected face photo thumbnail when arrow keys or PgUp/PgDn are used.
+040 ==> 
