--- a/NEWS
+++ b/NEWS
@@ -20,8 +20,9 @@ Advanced Search: Add search for items without face regions.
 Collections    : Add support for cross-platform network paths.
 Database       : Add support for SQLite WAL (Write-Ahead-Logging) mode.
 General        : Add spell-checking support in caption text widget using KF5::Sonnet component.
-                 Add spellcheck config panel in Setup/Misc for digiKam and Showfoto.
+                 Add Spellcheck config panel in Setup/Misc for digiKam and Showfoto.
 General        : Add online translations support to Alternative Language text editor widget.
+                 Add Localize config panel in Setup/Misc for digiKam and Showfoto.
 
 *****************************************************************************************************
 BUGFIXES:
