add context menu entry to update last assigned workflow BUGS: 458163 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -127,5 +127,5 @@ BUGFIXES:
 097 ==> 458082 - MP4 video failed to update metadata timestamp.
 098 ==> 283492 - Display only favorite languages in language selection comboboxes.
 099 ==> 370192 - Better handling of language selection menu entries with Captions tab.
-100 ==> 
+100 ==> 458163 - Cannot modify an existing BQM process.
 101 ==> 
