--- a/NEWS
+++ b/NEWS
@@ -72,4 +72,5 @@ BUGFIXES:
 043 ==> 384285 - Text unclear in documentation.
 044 ==> 458108 - Thumbnail disappears when image is renamed, reappears only on selection or mouseover.
 045 ==> 458145 - Geolocation editor works properly when opened from ShowFoto but not when opened from digiKam.
-046 ==> 
+046 ==> 458228 - Hugin doesnt work in Wayland.
+047 ==> 
