--- a/NEWS
+++ b/NEWS
@@ -73,4 +73,8 @@ BUGFIXES:
 044 ==> 458108 - Thumbnail disappears when image is renamed, reappears only on selection or mouseover.
 045 ==> 458145 - Geolocation editor works properly when opened from ShowFoto but not when opened from digiKam.
 046 ==> 458228 - Hugin doesnt work in Wayland.
-047 ==> 
+047 ==> 458260 - How can i switch to full Russian version of digiKam.
+048 ==> 
+049 ==> 
+050 ==> 
+051 ==> 
