--- a/NEWS
+++ b/NEWS
@@ -74,7 +74,7 @@ BUGFIXES:
 045 ==> 458145 - Geolocation editor works properly when opened from ShowFoto but not when opened from digiKam.
 046 ==> 458228 - Hugin doesnt work in Wayland.
 047 ==> 458260 - How can i switch to full Russian version of digiKam.
-048 ==> 
+048 ==> 458314 - digiKam crashes while editing picture.
 049 ==> 
 050 ==> 
 051 ==> 
