--- a/NEWS
+++ b/NEWS
@@ -130,6 +130,7 @@ BUGFIXES:
 100 ==> 458163 - Cannot modify an existing BQM process.
 101 ==> 458167 - Add more position for watermark.
 102 ==> 458200 - Size or position change made to face rectangle is only written to database and not to image file/sidecar.
-103 ==> 
-104 ==> 
-
+103 ==> 458344 - Inconsistencies between Collections and albums.
+104 ==> 444757 - Albums empty.
+105 ==> 371535 - Albums from ext hdd are removed when digikam starts up if the external HDD is not plugged in.
+106 ==> 
