--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ digiKam 7.9.0 - Release date: 2022-xx-xx
 *****************************************************************************************************
 NEW FEATURES:
 
+General: Update internal with snapshot 2002-09-03
 
 *****************************************************************************************************
 BUGFIXES:
