--- a/NEWS
+++ b/NEWS
@@ -8,4 +8,5 @@ General: Update internal with snapshot 2002-09-03
 *****************************************************************************************************
 BUGFIXES:
 
-001 ==> 
+001 ==> 458690 - Crash after the digiKam splash screen.
+002 ==> 
