--- a/NEWS
+++ b/NEWS
@@ -14,4 +14,5 @@ BUGFIXES:
 004 ==> 458704 - Migration Database.
 005 ==> 458968 - Geolocation information icon not visible.
 006 ==> 458958 - Album items not sorted according to date from XMP sidecar.
-007 ==> 
+007 ==> 459124 - Tags are duplicated when adding People/Face tags.
+008 ==> 
