--- a/NEWS
+++ b/NEWS
@@ -16,4 +16,5 @@ BUGFIXES:
 006 ==> 458958 - Album items not sorted according to date from XMP sidecar.
 007 ==> 459124 - Tags are duplicated when adding People/Face tags.
 008 ==> 459370 - Merge tags dont remove old tags.
-009 ==> 
+009 ==> 453621 - Error while opening the database.
+010 ==> 
