--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ digiKam 7.9.0 - Release date: 2022-xx-xx
 NEW FEATURES:
 
 General: Update internal Libraw with snapshot 2002-09-03
+General: Update Exiftool to 12.45 to the bundles.
 
 *****************************************************************************************************
 BUGFIXES:
