--- a/NEWS
+++ b/NEWS
@@ -150,4 +150,9 @@ BUGFIXES:
 112 ==> 459537 - "Ignored" face regions should not be saved into XMP metadata.
 113 ==> 459497 - digiKam fails to load images.
 114 ==> 459702 - digiKam git Mariadb issue.
-115 ==> 
+115 ==> 432265 - No error message when Digikam fails to read XMP metadata from image file.
+116 ==> 
+117 ==> 
+118 ==> 
+119 ==> 
+120 ==> 
