--- a/NEWS
+++ b/NEWS
@@ -153,6 +153,6 @@ BUGFIXES:
 115 ==> 432265 - No error message when Digikam fails to read XMP metadata from image file.
 116 ==> 459898 - Import video files into digiKam uses current date but not metadata date.
 117 ==> 436345 - Renamed FaceTags not written to file metadata.
-118 ==> 
+118 ==> 452539 - People tags are not shown correctly.
 119 ==> 
 120 ==> 
