--- a/NEWS
+++ b/NEWS
@@ -154,5 +154,12 @@ BUGFIXES:
 116 ==> 459898 - Import video files into digiKam uses current date but not metadata date.
 117 ==> 436345 - Renamed FaceTags not written to file metadata.
 118 ==> 452539 - People tags are not shown correctly.
-119 ==> 
+119 ==> 316856 - Add text-recognition system.
 120 ==> 
+121 ==> 
+122 ==> 
+123 ==> 
+124 ==> 
+125 ==> 
+126 ==> 
+127 ==> 
