--- a/NEWS
+++ b/NEWS
@@ -155,7 +155,7 @@ BUGFIXES:
 117 ==> 436345 - Renamed FaceTags not written to file metadata.
 118 ==> 452539 - People tags are not shown correctly.
 119 ==> 316856 - Add text-recognition system.
-120 ==> 
+120 ==> 459928 - Tags/keywords are not written back to MP4 video files, even with exiftool being configured.
 121 ==> 
 122 ==> 
 123 ==> 
