--- a/NEWS
+++ b/NEWS
@@ -156,7 +156,7 @@ BUGFIXES:
 118 ==> 452539 - People tags are not shown correctly.
 119 ==> 316856 - Add text-recognition system.
 120 ==> 459928 - Tags/keywords are not written back to MP4 video files, even with exiftool being configured.
-121 ==> 
+121 ==> 432369 - Wrong time for mp4 in _almost_ all places, metadata differs from filesystem/other apps. DB issues?
 122 ==> 
 123 ==> 
 124 ==> 
